--- a/src/app/admin/admin.page.scss
+++ b/src/app/admin/admin.page.scss
@@ -1,12 +1,26 @@
 h1 {
-    font-weight: 700;
-    font-size: 25px;
-    color: #010100;
-    margin-bottom: 15px;
-    text-align: center;
-    margin-top: 20px;
-  }
+  font-weight: 700;
+  font-size: 25px;
+  color: #010100;
+  margin-bottom: 15px;
+  text-align: center;
+  margin-top: 20px;
+}
 
-  ion-title{
-    text-align: center;
-  }
+ion-title {
+  text-align: center;
+}
+
+.grid-head {
+  font-weight: bold;
+}
+
+div {
+  text-align: center;
+}
+
+#btns {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
