--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -17,12 +17,6 @@
 </ion-header>
 
 <ion-content>
-  <!-- <div id="header">
-    <ion-avatar>
-      <img class="login-img" src="../../assets/images/Avatar-Profile-PNG.png">
-    </ion-avatar>
-  </div> -->
-
   <div id="form">
     <form class="example-form" [formGroup]="loginForm">
       <ion-grid class="example-full-width">
@@ -45,7 +39,7 @@
           <ion-col>
             <div class="example-container">
               <mat-form-field class="example-full-width" appearance="fill">
-                <mat-label>Create your password</mat-label>
+                <mat-label>Enter Your Password</mat-label>
                 <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
                 <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                   [attr.aria-pressed]="hide">
@@ -69,8 +63,8 @@
 
         <ion-row>
           <ion-col>
-            <ion-button color="danger" name="btnLogin" shape="round" id="login-btn" expand="full" (click)="saveLoginData()"
-              [disabled]="loginForm.invalid">
+            <ion-button color="danger" name="btnLogin" shape="round" id="login-btn" expand="full"
+              (click)="saveLoginData()" [disabled]="loginForm.invalid">
               <ion-icon name="log-in-outline" slot="end" color="light"></ion-icon>
               Login
             </ion-button>
