--- a/src/app/user/user.page.html
+++ b/src/app/user/user.page.html
@@ -2,12 +2,6 @@
   <ion-toolbar color="primary">
     <ion-title color="light">User-Dashboard</ion-title>
 
-    <ion-buttons slot="start">
-      <ion-button color="light" href="home">
-        <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-
     <ion-buttons slot="end">
       <ion-button color="light" (click)="getLogout()">
         <ion-icon name="log-out-outline" size="large"></ion-icon>
@@ -18,8 +12,10 @@
 
 <ion-content>
 
-  <div><h1>
-    Welcome User
-  </h1></div>
+  <div id="container">
+    <h1>
+      Welcome User
+    </h1>
+  </div>
 
 </ion-content>
