--- a/src/app/user/user.page.scss
+++ b/src/app/user/user.page.scss
@@ -1,3 +1,23 @@
-ion-title{
-    text-align: center;
+ion-title {
+  text-align: center;
+}
+
+#container {
+  text-align: center;
+
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#container strong {
+  font-size: 20px;
+  line-height: 26px;
+}
+
+#container h1{
+  font-size: 40px;
+  font-weight: bold;
 }
